# actix-web-composite-telemetry

./: .gitignore  Cargo.toml
composite/: Cargo.toml
composite/src/: awc.rs  layer.rs  lib.rs
tracing-actix-web/: Cargo.toml
tracing-actix-web/src/: otel.rs
