[package]
name = "actix-web-composite-telemetry"
version = "0.1.0"
edition = "2021"
authors = [
    "Gentoli <gentoli@live.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-opentelemetry = { path = "../actix-web-opentelemetry", features = ["awc"] }
actix-web = "4"
awc = "3"
opentelemetry = "0.17"
tracing = "0.1"
tracing-actix-web = { path = "../tracing-actix-web", features = ["opentelemetry_0_17"] }
tracing-log = "0.1"
tracing-opentelemetry = "0.17"
tracing-attributes = "0.1"
opentelemetry-jaeger = { version = "0.16", optional = true }
opentelemetry-stackdriver = { version = "0.14", optional = true, features = ["gcp_auth"] }
tracing-subscriber = { version = "0.3", features = ['env-filter'] }
tokio = { version = "*", optional = true }

[features]
jaeger = ["trace_output", "opentelemetry-jaeger"]
stackdriver = ["trace_output", "opentelemetry-stackdriver", "tokio"]
json_log = ["tracing-subscriber/json"]
std_tracer = ["trace_output"]
trace_output = []
